fix weather on safari browser

--- a/frontend/src/components/weather/css/style.css
+++ b/frontend/src/components/weather/css/style.css
@@ -1,6 +1,4 @@
 .weather-widget {
-  width: 100%;
-  height: 100%;
   margin: 0;
   color: white;
   font-family: league-gothic, sans-serif;
